jsoup changelog

**** Release 1.12.1 [PENDING]
  * Change: removed deprecated method to disable TLS cert checking Connection.validateTLSCertificates().

  * Improvement: documents now remember their parser, so when later manipulating them, the correct HTML or XML tree
    builder is reused, as are the parser settings like case sensitivity.
    <https://github.com/jhy/jsoup/issues/769>

  * Improvement: Jsoup now detects the character set of the input if specified in an XML Declaration, when using the
    HTML parser. Previously that only happened when the XML parser was specified.
    <https://github.com/jhy/jsoup/issues/1009>

*** Release 1.11.3 [2018-Apr-15]
  * Improvement: CDATA sections are now treated as whitespace preserving (regardless of the containing element), and are
    round-tripped into output HTML.
    <https://github.com/jhy/jsoup/issues/406>
    <https://github.com/jhy/jsoup/issues/965>

  * Improvement: added support for Deflate encoding.
    <https://github.com/jhy/jsoup/pull/982>

  * Improvement: when parsing <pre> tags, skip the first newline if present.
    <https://github.com/jhy/jsoup/issues/825>

  * Improvement: support nested quotes for attribute selection queries.
    <https://github.com/jhy/jsoup/pull/988>

  * Improvement: character references from Windows-1252 that are not valid Unicode are mapped to the appropriate
    Unicode replacement.
    <https://github.com/jhy/jsoup/pull/1046>

  * Improvement: accept a custom SSL socket factory in Jsoup.Connection.
    <https://github.com/jhy/jsoup/pull/1038>

  * Bugfix: "Mark has been invalidated" exception was thrown when parsing some URLs on Android <= 6.
    <https://github.com/jhy/jsoup/issues/990>

  * Bugfix: The Element.text() for <div>One</div>Two was "OneTwo", not "One Two".
    <https://github.com/jhy/jsoup/issues/812>

  * Bugfix: boolean attributes with empty string values were not collapsing in HTML output.
    <https://github.com/jhy/jsoup/issues/985>
