@@ -3,8 +3,6 @@ package org.jsoup.nodes;
 import org.jsoup.SerializationException;
 import org.jsoup.helper.StringUtil;
 import org.jsoup.helper.Validate;
-import org.jsoup.parser.HtmlTreeBuilder;
-import org.jsoup.parser.Parser;
 import org.jsoup.select.NodeFilter;
 import org.jsoup.select.NodeTraversor;
 import org.jsoup.select.NodeVisitor;
@@ -84,7 +82,7 @@ public abstract class Node implements Cloneable {
      * @return this (for chaining)
      */
     public Node attr(String attributeKey, String attributeValue) {
-        attributeKey = getParser().settings().normalizeAttribute(attributeKey);
+        attributeKey = NodeUtils.parser(this).settings().normalizeAttribute(attributeKey);
         attributes().putIgnoreCase(attributeKey, attributeValue);
         return this;
     }
@@ -334,7 +332,7 @@ public abstract class Node implements Cloneable {
         Validate.notNull(parentNode);
 
         Element context = parent() instanceof Element ? (Element) parent() : null;
-        List<Node> nodes = getParser().parseFragmentInput(html, context, baseUri());
+        List<Node> nodes = NodeUtils.parser(this).parseFragmentInput(html, context, baseUri());
         parentNode.addChildren(index, nodes.toArray(new Node[nodes.size()]));
     }
 
@@ -347,9 +345,9 @@ public abstract class Node implements Cloneable {
         Validate.notEmpty(html);
 
         Element context = parent() instanceof Element ? (Element) parent() : null;
-        List<Node> wrapChildren = getParser().parseFragmentInput(html, context, baseUri());
+        List<Node> wrapChildren = NodeUtils.parser(this).parseFragmentInput(html, context, baseUri());
         Node wrapNode = wrapChildren.get(0);
-        if (wrapNode == null || !(wrapNode instanceof Element)) // nothing to wrap with; noop
+        if (!(wrapNode instanceof Element)) // nothing to wrap with; noop
             return null;
 
         Element wrap = (Element) wrapNode;
@@ -562,28 +560,19 @@ public abstract class Node implements Cloneable {
     }
 
     /**
-     Get the outer HTML of this node.
-     @return HTML
+     Get the outer HTML of this node. For example, on a {@code p} element, may return {@code <p>Para</p>}.
+     @return outer HTML
+     @see Element#html()
+     @see Element#text()
      */
     public String outerHtml() {
-        StringBuilder accum = new StringBuilder(128);
+        StringBuilder accum = StringUtil.stringBuilder();
         outerHtml(accum);
         return accum.toString();
     }
 
     protected void outerHtml(Appendable accum) {
-        NodeTraversor.traverse(new OuterHtmlVisitor(accum, getOutputSettings()), this);
-    }
-
-    // if this node has no document (or parent), retrieve the default output settings
-    Document.OutputSettings getOutputSettings() {
-        Document owner = ownerDocument();
-        return owner != null ? owner.outputSettings() : (new Document("")).outputSettings();
-    }
-
-    Parser getParser() {
-        Document doc = ownerDocument();
-        return doc != null && doc.parser() != null ? doc.parser() : new Parser(new HtmlTreeBuilder());
+        NodeTraversor.traverse(new OuterHtmlVisitor(accum, NodeUtils.outputSettings(this)), this);
     }
 
     /**
@@ -606,6 +595,11 @@ public abstract class Node implements Cloneable {
         return appendable;
     }
 
+    /**
+     * Gets this node's outer HTML.
+     * @return outer HTML.
+     * @see #outerHtml()
+     */
 	public String toString() {
         return outerHtml();
     }
@@ -632,7 +626,6 @@ public abstract class Node implements Cloneable {
      * @param o other object to compare to
      * @return true if the content of this node is the same as the other
      */
-
     public boolean hasSameValue(Object o) {
         if (this == o) return true;
         if (o == null || getClass() != o.getClass()) return false;
